fix: background issue on ios

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@ body {
   overflow-x: hidden;
   font-family: arial, sans-serif;
   font-size: var(--font-size);
-  background: url('/background.svg');
+  background: #4fa0dd url('/background.svg');
   background-size: var(--bg-size);
   animation: bg 10s linear infinite reverse;
 }
